--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main{
+    display: flex;
+    width:80%;
+    height: 100vh;
+    margin: auto;
+}
+.left{
+    flex:1;
+   /* background-color: antiquewhite; */
+}
+.right{
+    flex:3;
+    /* background-color: beige; */
+    margin-left: 30px;
+}
+.App{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:rgb(7, 45, 45)
+}
+.underline{
+    color: blueviolet;
+    font-weight: bolder;
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.left{
+    text-align: left;
+    margin-top: 10px;
+}
+body{
+    background-color: azure;
 }
